gImageReader 3.2.1 (Feb 10 2017):
* Add possibility to rotate individual pages of multipage documents
* Ensure the tessdata manager downloads compatible tesseract languge definitions
* Add CCITT Group4 compression option for monochrome PDF export
* Allow choosing between diffuse and threshold dithering for monochrome PDF export
* Preview JPEG compression quality in PDF output preview
* Make brightness/contrast/resolution changes affect all selected sources
* [Qt] Support multipage images through QImageReader (Qt5.9+ will support multipage TIFFs)
* [Gtk] Fix hang when saving selection image
* [Qt] Fix possible deadlock when rapidly switching sources
* Updated translations

gImageReader 3.2.0 (Nov 23 2016):
 * gImageReader 3.2.0 stable
 * Add PageUp / PageDown keyboard accelerators for browsing multipage documents
 * See 3.1.9x changelogs for all other feature changes since previous stable
 * Many bug fixes since 3.1.99 - special thanks to Daniel Plakhotich
 * Full details in commit log: https://github.com/manisandro/gImageReader/commits/master

gImageReader 3.1.99 (Oct 13 2016):
 * gImageReader 3.2 release candidate
 * General improvements:
   - Catch critical tesseract errors which otherwise result in the application crashing
   - Improve spelling dictionary auto-installation logic
   - Allow choosing whether to store language files (language definitions, spelling dictionaries) in system-wide or user-local directories
 * Plain text mode improvements:
   - Allow recognizing user-defined regions on multiple pages
   - Also treat \u2014 character as a hyphen
   - Make preserve paragraphs option correctly deal with trailing whitespace
 * hOCR editor improvements:
   - Add "Add to dictionary" and "Ignore word" actions to spell-checking menu in hOCR editor
   - Exclude non-word characters from spell-checking
   - Allow merging adjacent word items
   - Allow adjusting bounding boxes of document elements by resizing the selection in the canvas